parsers/yaccparser/y.output

state 0
	$accept: .manifest $end 

	tag_EXTM3U  shift 4
	tag_EXT_X_VERSION  shift 5
	tag_EXT_X_INDEPENDENT_SEGMENTS  shift 7
	tag_EXT_X_MEDIA  shift 8
	tag_EXT_X_STREAM_INF  shift 6
	tag_EXT_X_TARGETDURATION  shift 9
	tag_EXT_X_SERVER_CONTROL  shift 10
	tag_EXT_X_PART_INF  shift 11
	tag_EXT_X_MEDIA_SEQUENCE  shift 12
	tag_EXT_X_SKIP  shift 13
	tag_EXTINF  shift 14
	tag_EXT_X_PROGRAM_DATE_TIME  shift 15
	tag_EXT_X_PART  shift 16
	tag_EXT_X_PRELOAD_HINT  shift 17
	tag_EXT_X_RENDITION_REPORT  shift 18
	tag_EXT_X_MAP  shift 19
	.  error

	entry  goto 3
	entries  goto 2
	manifest  goto 1

state 1
	$accept:  manifest.$end 

	$end  accept
	.  error


state 2
	manifest:  entries.    (1)
	entries:  entries.entry 

	tag_EXTM3U  shift 4
	tag_EXT_X_VERSION  shift 5
	tag_EXT_X_INDEPENDENT_SEGMENTS  shift 7
	tag_EXT_X_MEDIA  shift 8
	tag_EXT_X_STREAM_INF  shift 6
	tag_EXT_X_TARGETDURATION  shift 9
	tag_EXT_X_SERVER_CONTROL  shift 10
	tag_EXT_X_PART_INF  shift 11
	tag_EXT_X_MEDIA_SEQUENCE  shift 12
	tag_EXT_X_SKIP  shift 13
	tag_EXTINF  shift 14
	tag_EXT_X_PROGRAM_DATE_TIME  shift 15
	tag_EXT_X_PART  shift 16
	tag_EXT_X_PRELOAD_HINT  shift 17
	tag_EXT_X_RENDITION_REPORT  shift 18
	tag_EXT_X_MAP  shift 19
	.  reduce 1 (src line 167)

	entry  goto 20

state 3
	entries:  entry.    (2)

	.  reduce 2 (src line 169)


state 4
	entry:  tag_EXTM3U.    (4)

	.  reduce 4 (src line 172)


state 5
	entry:  tag_EXT_X_VERSION.token_INTEGERVAL 

	token_INTEGERVAL  shift 21
	.  error


state 6
	entry:  tag_EXT_X_STREAM_INF.ATTRLIST token_SECONDLINEVALUE 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 22

state 7
	entry:  tag_EXT_X_INDEPENDENT_SEGMENTS.    (7)

	.  reduce 7 (src line 175)


state 8
	entry:  tag_EXT_X_MEDIA.ATTRLIST 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 49

state 9
	entry:  tag_EXT_X_TARGETDURATION.token_INTEGERVAL 

	token_INTEGERVAL  shift 50
	.  error


state 10
	entry:  tag_EXT_X_SERVER_CONTROL.ATTRLIST 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 51

state 11
	entry:  tag_EXT_X_PART_INF.ATTRLIST 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 52

state 12
	entry:  tag_EXT_X_MEDIA_SEQUENCE.token_INTEGERVAL 

	token_INTEGERVAL  shift 53
	.  error


state 13
	entry:  tag_EXT_X_SKIP.ATTRLIST 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 54

state 14
	entry:  tag_EXTINF.token_FLOATVAL token_COMMA token_SECONDLINEVALUE 
	entry:  tag_EXTINF.token_INTEGERVAL token_COMMA token_SECONDLINEVALUE 

	token_INTEGERVAL  shift 56
	token_FLOATVAL  shift 55
	.  error


state 15
	entry:  tag_EXT_X_PROGRAM_DATE_TIME.token_TIMEVAL 

	token_TIMEVAL  shift 57
	.  error


state 16
	entry:  tag_EXT_X_PART.ATTRLIST 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 58

state 17
	entry:  tag_EXT_X_PRELOAD_HINT.ATTRLIST 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 59

state 18
	entry:  tag_EXT_X_RENDITION_REPORT.ATTRLIST 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 60

state 19
	entry:  tag_EXT_X_MAP.ATTRLIST 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 23
	ATTRLIST  goto 61

state 20
	entries:  entries entry.    (3)

	.  reduce 3 (src line 170)


state 21
	entry:  tag_EXT_X_VERSION token_INTEGERVAL.    (5)

	.  reduce 5 (src line 173)


state 22
	entry:  tag_EXT_X_STREAM_INF ATTRLIST.token_SECONDLINEVALUE 
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	token_SECONDLINEVALUE  shift 62
	.  error


state 23
	ATTRLIST:  ATTRANDVAL.    (21)

	.  reduce 21 (src line 190)


state 24
	ATTRANDVAL:  ATTRTOKEN.VALUE 

	token_INTEGERVAL  shift 65
	token_FLOATVAL  shift 66
	token_STRINGVAL  shift 67
	token_RESOLUTIONVAL  shift 68
	token_TIMEVAL  shift 69
	.  error

	VALUE  goto 64

state 25
	ATTRANDVAL:  token_ATTRKEY.VALUE 

	token_INTEGERVAL  shift 65
	token_FLOATVAL  shift 66
	token_STRINGVAL  shift 67
	token_RESOLUTIONVAL  shift 68
	token_TIMEVAL  shift 69
	.  error

	VALUE  goto 70

state 26
	ATTRTOKEN:  token_ATTR_BANDWIDTH.    (25)

	.  reduce 25 (src line 196)


state 27
	ATTRTOKEN:  token_ATTR_AVERAGE_BANDWIDTH.    (26)

	.  reduce 26 (src line 197)


state 28
	ATTRTOKEN:  token_ATTR_RESOLUTION.    (27)

	.  reduce 27 (src line 198)


state 29
	ATTRTOKEN:  token_ATTR_FRAME_RATE.    (28)

	.  reduce 28 (src line 199)


state 30
	ATTRTOKEN:  token_ATTR_CODECS.    (29)

	.  reduce 29 (src line 200)


state 31
	ATTRTOKEN:  token_ATTR_AUDIO.    (30)

	.  reduce 30 (src line 201)


state 32
	ATTRTOKEN:  token_ATTR_TYPE.    (31)

	.  reduce 31 (src line 202)


state 33
	ATTRTOKEN:  token_ATTR_GROUP_ID.    (32)

	.  reduce 32 (src line 203)


state 34
	ATTRTOKEN:  token_ATTR_NAME.    (33)

	.  reduce 33 (src line 204)


state 35
	ATTRTOKEN:  token_ATTR_DEFAULT.    (34)

	.  reduce 34 (src line 205)


state 36
	ATTRTOKEN:  token_ATTR_AUTOSELECT.    (35)

	.  reduce 35 (src line 206)


state 37
	ATTRTOKEN:  token_ATTR_LANGUAGE.    (36)

	.  reduce 36 (src line 207)


state 38
	ATTRTOKEN:  token_ATTR_CHANNELS.    (37)

	.  reduce 37 (src line 208)


state 39
	ATTRTOKEN:  token_ATTR_URI.    (38)

	.  reduce 38 (src line 209)


state 40
	ATTRTOKEN:  token_ATTR_CAN_BLOCK_RELOAD.    (39)

	.  reduce 39 (src line 210)


state 41
	ATTRTOKEN:  token_ATTR_CAN_SKIP_UNTIL.    (40)

	.  reduce 40 (src line 211)


state 42
	ATTRTOKEN:  token_ATTR_PART_HOLD_BACK.    (41)

	.  reduce 41 (src line 212)


state 43
	ATTRTOKEN:  token_ATTR_PART_TARGET.    (42)

	.  reduce 42 (src line 213)


state 44
	ATTRTOKEN:  token_ATTR_SKIPPED_SEGMENTS.    (43)

	.  reduce 43 (src line 214)


state 45
	ATTRTOKEN:  token_ATTR_DURATION.    (44)

	.  reduce 44 (src line 215)


state 46
	ATTRTOKEN:  token_ATTR_INDEPENDENT.    (45)

	.  reduce 45 (src line 216)


state 47
	ATTRTOKEN:  token_ATTR_LAST_MSN.    (46)

	.  reduce 46 (src line 217)


state 48
	ATTRTOKEN:  token_ATTR_LAST_PART.    (47)

	.  reduce 47 (src line 218)


state 49
	entry:  tag_EXT_X_MEDIA ATTRLIST.    (8)
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	.  reduce 8 (src line 176)


state 50
	entry:  tag_EXT_X_TARGETDURATION token_INTEGERVAL.    (9)

	.  reduce 9 (src line 177)


state 51
	entry:  tag_EXT_X_SERVER_CONTROL ATTRLIST.    (10)
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	.  reduce 10 (src line 178)


state 52
	entry:  tag_EXT_X_PART_INF ATTRLIST.    (11)
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	.  reduce 11 (src line 179)


state 53
	entry:  tag_EXT_X_MEDIA_SEQUENCE token_INTEGERVAL.    (12)

	.  reduce 12 (src line 180)


state 54
	entry:  tag_EXT_X_SKIP ATTRLIST.    (13)
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	.  reduce 13 (src line 181)


state 55
	entry:  tag_EXTINF token_FLOATVAL.token_COMMA token_SECONDLINEVALUE 

	token_COMMA  shift 71
	.  error


state 56
	entry:  tag_EXTINF token_INTEGERVAL.token_COMMA token_SECONDLINEVALUE 

	token_COMMA  shift 72
	.  error


state 57
	entry:  tag_EXT_X_PROGRAM_DATE_TIME token_TIMEVAL.    (16)

	.  reduce 16 (src line 184)


state 58
	entry:  tag_EXT_X_PART ATTRLIST.    (17)
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	.  reduce 17 (src line 185)


state 59
	entry:  tag_EXT_X_PRELOAD_HINT ATTRLIST.    (18)
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	.  reduce 18 (src line 186)


state 60
	entry:  tag_EXT_X_RENDITION_REPORT ATTRLIST.    (19)
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	.  reduce 19 (src line 187)


state 61
	entry:  tag_EXT_X_MAP ATTRLIST.    (20)
	ATTRLIST:  ATTRLIST.token_COMMA ATTRANDVAL 

	token_COMMA  shift 63
	.  reduce 20 (src line 188)


state 62
	entry:  tag_EXT_X_STREAM_INF ATTRLIST token_SECONDLINEVALUE.    (6)

	.  reduce 6 (src line 174)


state 63
	ATTRLIST:  ATTRLIST token_COMMA.ATTRANDVAL 

	token_ATTR_BANDWIDTH  shift 26
	token_ATTR_AVERAGE_BANDWIDTH  shift 27
	token_ATTR_RESOLUTION  shift 28
	token_ATTR_FRAME_RATE  shift 29
	token_ATTR_CODECS  shift 30
	token_ATTR_AUDIO  shift 31
	token_ATTR_TYPE  shift 32
	token_ATTR_GROUP_ID  shift 33
	token_ATTR_NAME  shift 34
	token_ATTR_DEFAULT  shift 35
	token_ATTR_AUTOSELECT  shift 36
	token_ATTR_LANGUAGE  shift 37
	token_ATTR_CHANNELS  shift 38
	token_ATTR_URI  shift 39
	token_ATTR_CAN_BLOCK_RELOAD  shift 40
	token_ATTR_CAN_SKIP_UNTIL  shift 41
	token_ATTR_PART_HOLD_BACK  shift 42
	token_ATTR_PART_TARGET  shift 43
	token_ATTR_SKIPPED_SEGMENTS  shift 44
	token_ATTR_DURATION  shift 45
	token_ATTR_INDEPENDENT  shift 46
	token_ATTR_LAST_MSN  shift 47
	token_ATTR_LAST_PART  shift 48
	token_ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 73

state 64
	ATTRANDVAL:  ATTRTOKEN VALUE.    (23)

	.  reduce 23 (src line 193)


state 65
	VALUE:  token_INTEGERVAL.    (48)

	.  reduce 48 (src line 220)


state 66
	VALUE:  token_FLOATVAL.    (49)

	.  reduce 49 (src line 221)


state 67
	VALUE:  token_STRINGVAL.    (50)

	.  reduce 50 (src line 222)


state 68
	VALUE:  token_RESOLUTIONVAL.    (51)

	.  reduce 51 (src line 223)

